                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0


  *) [TS-2347] buffer_upload uses unsafe function tempnam(). Replace it 
   with mkstemp()

  *) [TS-1815] Add thread number and port to accept thread name and
   add the file descriptor number to the ET_AIO thread names

  *) [TS-2415] Use standard continuations to release UrlRewrite objects.

  *) [TS-2413] Release memory for idle SSL connections.
   Author: Wei Sun <sunwei@yahoo-inc.com>

  *) [TS-2365] Configure the maximum TLS record size.
   Author: Wei Sun <sunwei@yahoo-inc.com>

  *) [TS-2351] Bandaid fix for Range request crash related to
   Read-While-Writer and content length calculations.

  *) [TS-2408] Fix double free of proxy.config.admin.user_id.

  *) [TS-2396] UrlRewrite.cc does not free the queue correctly.
   Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-2382] Partial fix for make install creating man files as root.

  *) [TS-2381] Reorganize TSUrlCreate docs into separate files.

  *) [TS-2377] Install man pages as part of the build.

  *) [TS-2379] Add a new field: '%<chp>', "client_host_port" to LogFormat.

  *) [TS-2374] Abort the producer if the none of it`s consumers is alive.

  *) [TS-2330] Update proxy.config.body_factory.enable_customizations comments in records.config

  *) [TS-2327] TSRedirectUrlSet does not perform DNS lookup of redirected OS

  *) [TS-1468] Check vary and accept headers on non-200 responses in cache

  *) [TS-2352] refine THREAD_ALLOC feature.

  *) [TS-2364] Introduce slice notation to field syntax in log format.

  *) [TS-2360] Fix usage of TSMimeHdrFieldValueStringGet() IDX in some plugins.

  *) [TS-2361] Load regex_remap configuration relative to the configuration directory.

  *) [TS-2359] Make install over existing installation can fail.

  *) [TS-2350] Enhancements to traffic_top

  *) [TS-2348] Rename tstop to traffic_top.

  *) [TS-2340] Fix TextLogObject log rolling.